fix:sections experience, projects and scrollbar

--- a/assets/css/global/scrollbar.css
+++ b/assets/css/global/scrollbar.css
@@ -1,23 +1,57 @@
 /* Personaliza a cor do scroll da página */
-html {
+/* html {
   scrollbar-color: var(--cor-roxa) #fff;
   scrollbar-width: thin;
 }
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background-color: #000;
   width: 6px;
   height: 6px;
-  border-radius: 9px;
+  border-radius: 12px;
 
 }
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 6px;
   height: 6px;
-  border-radius: 9px;
+  border-radius: 12px;
 }
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: #fff;
   width: 6px;
   height: 6px;
-  border-radius: 9px;
+  border-radius: 12px;
+}
+@supports not selector(::-webkit-scrollbar) {
+  body {
+      scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  } */
+
+  
+body {
+  --sb-track-color: #ffffff;
+  --sb-thumb-color: var(--cor-roxa);
+  --sb-size: 14px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size)
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 12px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 12px;
+  
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  }
 }
